--- a/styles.css
+++ b/styles.css
@@ -30,6 +30,7 @@ body, html {
     left: 0;
     width: 100%;
     height: 100%;
+    z-index: -1;
 }
 
 .bg-img{
@@ -37,14 +38,23 @@ body, html {
     height: 100%;
 }
 
+.bar{
+    position: absolute;
+    top: 250px;
+    color: white;
+    width: 100%;
+    text-align: center;
+    font-size: 4rem;
+    padding: 50px 0px;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
 .top,
 .middle,
 .bottom {
     position: relative;
     padding: 25px;
-    box-sizing: border-box;
-    border: 1px solid #ccc;
-    text-align: center;
+    text-align: left;
     flex: 1;
 }
 
@@ -63,4 +73,51 @@ body, html {
 
 .top, .bottom{
     background-color: #F9F9F9;
+}
+
+.credits{
+    position: absolute;
+    width: 100%;
+    text-align: center;
+    color: white;
+    bottom: 5px;
+}
+
+button{
+    background-color: #596D48;
+    color: white;
+    font-weight: bold;
+    padding: 10px 40px;
+    border-radius: 5px;
+    border: none;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+}
+
+span{
+    color: #596D48;
+}
+
+.log{
+font-weight: bold;
+}
+
+.middle{
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.first-line, .second-line, .third-line{
+    display: flex;
+    justify-content: space-between;
+}
+
+.stack-1 label, .stack-2 label, .stack-3 label, .stack-4 label, .stack-5 label, .stack-6 label{
+    display: block;
+}
+
+.forms{
+    width: 70%;
+}
+
+form{
+    gap: 10px;
 }
